--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -29,3 +29,9 @@
   font-size: 5rem;
   cursor: pointer;
 }
+
+@media screen and (max-width: 900px) {
+  .header-brand {
+    font-size: 3rem;
+  }
+}
