--- a/client/src/App.css
+++ b/client/src/App.css
@@ -97,6 +97,16 @@
   color: red !important;
 }
 
+.error-toast {
+  position: fixed;
+  bottom: 5rem;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 10;
+  width: 100%;
+  max-width: 500px !important;
+  font-size: 1.25rem !important;
+}
 @media screen and (max-width: 573px) {
   .load-body,
   .load-logo {
