--- a/client/src/styles/ListColumn.css
+++ b/client/src/styles/ListColumn.css
@@ -2,7 +2,7 @@
   padding: 0.75rem;
   padding-bottom: 0;
   padding-top: 0;
-  border-right: solid #e0e0e0 0.15rem;
+  border-right: solid var(--primary-border) 0.15rem;
   color: rgb(65, 64, 64);
 }
 
@@ -38,7 +38,7 @@
   margin-top: 0.3rem;
   margin-bottom: 0.3rem;
   transition: all 0.2s;
-  border-bottom: 0.1rem #e0e0e0 solid;
+  border-bottom: 0.1rem var(--primary-border) solid;
   white-space: nowrap;
   clear: right;
   font-size: 0.85rem;
@@ -77,10 +77,10 @@
 .todo-input {
   margin-bottom: 0.25rem;
   background-color: rgba(255, 255, 255, 0.5) !important;
-  border: 0.1rem #e0e0e0 solid !important;
+  border: 0.1rem var(--primary-border) solid !important;
   border-radius: 0.5rem !important;
   font-size: 1rem !important;
-  border-bottom: 0.1rem #e0e0e0 solid !important;
+  border-bottom: 0.1rem var(--primary-border) solid !important;
   transition: all 0.2s;
 }
 
@@ -170,7 +170,7 @@
 }
 .stat {
   width: 3rem;
-  border-right: 0.1rem #e0e0e0 solid !important;
+  border-right: 0.1rem var(--primary-border) solid !important;
   display: inline-block;
   text-align: center;
   white-space: nowrap;
@@ -200,7 +200,7 @@
   text-align: center;
   cursor: pointer;
   user-select: none;
-  border-right: 0.1rem #e0e0e0 solid !important;
+  border-right: 0.1rem var(--primary-border) solid !important;
   font-size: 0.8rem !important;
   padding: 0.2rem;
   margin-right: 0.1rem;
