--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
   --primary-bgcolor: #f0f8fe;
   --secondary-color: white;
   --secondary-color-lighter: rgb(207, 207, 207);
+  --primary-color-hover: rgba(124, 124, 124, 0.1);
   --secondary-bgcolor: #405364;
   --primary-border: #e0e0e0;
   --secondary-border: #384857;
