--- a/client/src/styles/Main.css
+++ b/client/src/styles/Main.css
@@ -19,12 +19,12 @@
 .btn-nice {
   background-color: transparent !important;
   color: black !important;
-  border: 0.1rem #e0e0e0 solid !important;
+  border: 0.1rem var(--primary-border) solid !important;
   font-weight: 600 !important;
 }
 
 .btn-nice:hover {
-  background-color: white !important;
+  background-color: rgba(136, 136, 136, 0.1) !important;
 }
 .project-name {
   margin-top: 0.75rem;
