--- a/client/src/styles/TodoColumn.css
+++ b/client/src/styles/TodoColumn.css
@@ -88,7 +88,7 @@
   transition: all 0.2s;
 }
 .stat-col:hover {
-  background-color: rgba(124, 124, 124, 0.1) !important;
+  background-color: var(--primary-color-hover) !important;
   border-radius: 0.5rem;
 }
 .stat-row {
@@ -120,7 +120,7 @@
 }
 
 .side-head .append:hover {
-  background-color: rgba(255, 255, 255, 0.281);
+  background-color: var(--primary-color-hover);
   border-radius: 0.5rem;
 }
 
@@ -157,7 +157,7 @@
   border-radius: 0.5rem;
 }
 .side-item:hover {
-  background-color: rgba(124, 124, 124, 0.1);
+  background-color: var(--primary-color-hover);
   border-radius: 0.5rem;
 }
 
