--- a/client/src/styles/ListColumn.css
+++ b/client/src/styles/ListColumn.css
@@ -3,7 +3,7 @@
   padding-bottom: 0;
   padding-top: 0;
   border-right: solid var(--primary-border) 0.15rem;
-  color: rgb(65, 64, 64);
+  color: var(--primary-color-lighter);
 }
 
 .todo-list {
@@ -25,7 +25,7 @@
   padding: 0.75rem;
   padding-top: 1rem;
   font-weight: 600;
-  color: black;
+  color: var(--primary-color);
 }
 .todo-top-menu .dropdown-menu {
   font-size: 1.25rem !important;
@@ -52,7 +52,7 @@
   overflow-y: hidden;
 }
 .completed {
-  color: rgba(10, 10, 10, 0.514) !important;
+  color: var(--primary-color-disabled) !important;
   background-color: transparent !important;
   border: 0 !important;
 }
