--- a/client/src/styles/ProjectColumn.css
+++ b/client/src/styles/ProjectColumn.css
@@ -187,7 +187,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #405364;
+  background-color: var(--secondary-bgcolor);
   height: 3.5rem;
   color: rgb(185, 185, 185);
 }
