--- a/client/src/App.css
+++ b/client/src/App.css
@@ -119,7 +119,7 @@
 
 .returner {
   display: none;
-  color: rgb(63, 63, 63);
+  color: var(--primary-color-lighter);
   cursor: pointer;
   text-align: center;
   font-size: 1.5rem;
